--- a/PortActions.vbproj
+++ b/PortActions.vbproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <LangVersion>11</LangVersion>
     <ApplicationIcon>My Project\SerialPort.ico</ApplicationIcon>
     <NoWin32Manifest>False</NoWin32Manifest>
     <ApplicationManifest>My Project\App.manifest</ApplicationManifest>
